--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">Marlon</a>
+                    <a href="#" class="nav__logo">Aayat Ali</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
@@ -40,14 +40,14 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi there, nice to meet you.<br>I'm <span class="home__title-color">Aayat (Ah-yat)</span><br> UX & Service Designer</h1>
+                    <h1 class="home__title">Hi there,<br>I'm <span class="home__title-color">Aayat (Ah-yat)</span><br> UX & Service Designer</h1>
 
                     <a href="#" class="button">Contact</a>
                 </div>
 
                 <div class="home__social">
-                    <a href="" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                    <a href="https://www.linkedin.com/in/aayat-ali-a5850134/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://github.com/aayatsali" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
                 <div class="home__img">
@@ -69,7 +69,7 @@
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="assets/img/about.jpg" alt="">
+                        <img src="assets/img/about.jpg" alt="A woman wearing a red shirt with plants in the background">
                     </div>
                     
                     <div>
