--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi there,<br>I'm <span class="home__title-color">Aayat (Ah-yat)</span><br> UX & Service Designer</h1>
+                    <h1 class="home__title">Hi there,<br>I'm <span class="home__title-color">Aayat (Ah-yat)</span><br> UX & <br>Service Designer</h1>
 
-                    <a href="#" class="button">Contact</a>
+                    <a href="https://aayatsali.github.io/portfolio-responsive-complete/#contact" class="button">Contact</a>
                 </div>
 
                 <div class="home__social">
