--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi there,<br>I'm <span class="home__title-color">Aayat (Ah-yat)</span><br> UX & <br>Service Designer</h1>
+                    <h1 class="home__title">Hi there,<br>I'm <span class="home__title-color">Aayat (Ah-yat)</span><br>UX &<br>Service Designer</h1>
 
                     <a href="https://aayatsali.github.io/portfolio-responsive-complete/#contact" class="button">Contact</a>
                 </div>
@@ -69,7 +69,7 @@
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="assets/img/about.jpg" alt="A woman wearing a red shirt with plants in the background">
+                        <img src="assets/img/about.jpg" alt="">
                     </div>
                     
                     <div>
