--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi there,<br>I'm <span class="home__title-color">Aayat (Ah-yat)</span><br>a user experience &<br>service designer</h1>
+                    <h1 class="home__title">Hi there,<br>I'm <span class="home__title-color">Aayat (Ah-yat)</span><br>a ux &<br>service designer</h1>
 
                     <a href="https://aayatsali.github.io/portfolio-responsive-complete/#contact" class="button">Contact</a>
                 </div>
