--- a/index.html
+++ b/index.html
@@ -64,13 +64,12 @@
                 <h2 class="section-title">About</h2>
 
                 <div class="about__container bd-grid">
-                    <div class="about__img">
-                        <img src="assets/img/about.jpg.png" alt="">
+                    <div class="about__text">
+                         <p class="about__text">I'm a human-centered researcher, designer, and strategist working at the intersections of healthcare, social work, policy, and technology. I strive to drive real change, make good trouble, put people first and stay inquisitive in everything I do.</p> 
                     </div>
                     
                     <div>
-                        <h2 class="about__subtitle">I'm Aayat</h2>
-                        <p class="about__text">I'm a human-centered researcher, designer, and strategist working at the intersections of healthcare, social work, policy, and technology. I strive to drive real change, make good trouble, put people first and stay inquisitive in everything I do.</p>           
+                        <p class="about__text">I started my career in criminal justice reentry and homeless services. Over the years, I gravitated towards big data, design, and user experience methods to improve service delivery, deepen stakeholder engagement, and achieve better outcomes. I hold masters' degrees in Social Work and Urban Planning from the University of Michigan and a UX certificate from UCLA Extension. Download my resume.</p>           
                     </div>                                   
                 </div>
             </section>
