--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
         <title>Aayat Ali</title>
+        <link rel="icon" type="image/x-icon" href="assets/img/Me as avatar.png">
     </head>
     <body>
         <!--===== HEADER =====-->
