--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <!--===== FOOTER =====-->
         <footer class="footer">
             <p class="footer__title">Aayat Ali</p>
-            <p class="footer__copy">&#169; Aayat Ali. All rigths reserved</p>
+            <p class="footer__copy">&#169; Aayat Ali. All rights reserved</p>
         </footer>
 
 
