--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                 <div class="skills__container bd-grid">          
                     <div>
-                        <h2 class="skills__subtitle">Profesional Skills</h2>
+                        <h2 class="skills__subtitle">Professional Skills</h2>
                         <p class="skills__text">Coming from a social services background, I have a knack for big systems thinking and process development. I work with my team to understand the components of a project before iterating.</p>
                         <div class="skills__data">
                             <div class="skills__html">
