--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     </div>
                     
                     <div>              
-                        <img src="assets/img/IMG_1730.JPG" alt="" class="skills__img">
+                        <img src="assets/img/user research.jpg" alt="" class="skills__img">
                     </div>
                 </div>
             </section>
