--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                  <div class="home__img">
                     <div class="home__img">
-                        <img src="assets/img/about.jpg.png" alt="">
+                        <img src="assets/img/Aayat Ali_1.jpg" alt="">
                         <width: 904; height: 646>
                     </div>
 
